tests/unit/components/snapshots/r#mod__unit__components__extension_form_test__tests__snapshot_empty_form.snap
---
source: tests/unit/components/extension_form_test.rs
expression: output.unwrap()
---
╭──────────────────────────── Create New Extension ────────────────────────────╮
│                                                                              │
│ ┌Name───────────────────────────────────────────────┐┌Version──────────────┐ │
│ │                                                   ││1.0.0                │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Description────────────────────────────────────────┐┌Tags─────────────────┐ │
│ │                                                   ││                     │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Context File────────────────────────┐┌MCP Servers (↑/↓ to navigate, n: new┐ │
│ │GEMINI.md                           ││  No MCP servers configured         │ │
│ └────────────────────────────────────┘│                                    │ │
│ ┌Context Content (Markdown)──────────┐│                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ └────────────────────────────────────┘└────────────────────────────────────┘ │
│         Tab: Next field | Type: Edit | Ctrl+S: Save | Esc, b: Cancel         │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
